// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> should match the default snapshot 1`] = `
<input
  className={undefined}
  id="input"
  type="text"
/>
`;

exports[`<Label> should match the default snapshot 1`] = `
<div>
  <input
    className={undefined}
    id="input"
    type="text"
  />
  <label
    className="p-form__label"
    htmlFor="input"
  />
</div>
`;
